Finishing the firts project. Pendient: SendGrid API services

--- a/Portafolio/Portafolio/Views/Home/Index.cshtml
+++ b/Portafolio/Portafolio/Views/Home/Index.cshtml
@@ -5,28 +5,4 @@
 
 <partial name="_Presentation" />
 <partial name="_Habilities" />
-@if (Model.Projects is not null){
-    <div class="text-center" style="padding-top: 6rem;">
-        <h1>My recents projects</h1>
-        <p>Some of my recentes projects...</p>
-    </div>
-    <div class="container">
-        <div class="row row-cols-1 row-cols-md-3 g-4">
-            @foreach (var pro in Model.Projects)
-            {
-                <div class="col">
-                    <div class="card h-100">
-                        <img src="@pro.ImageURL" class="card-img-top" alt="proyect"/>
-                        <div class="card-body">
-                            <h5 class="card-title">@pro.Title</h5>
-                            <p class="card-text">@pro.Description</p>
-                        </div>
-                        <div class="card-footer">
-                            <a class="btn btn-dark" href=@pro.Link target="_blank" rel="noopener noreferrer" >Visit</a>
-                        </div>
-                    </div>
-                </div>
-            }
-        </div>
-    </div>
-}
+<partial name="_ProjectSection" model="Model.Projects" />
